week8-design-review/W8D2/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: demo-service

spec:
  selector:
    app: demo

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
