week8-design-review/W8D2/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: demo-ingress

spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - demo.lab
    secretName: demo-tls

  rules:
  - host: demo.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-service
            port:
              number: 80
